@@ -11,4 +11,12 @@ public class OrdinalTest extends TestCase {
 		assertTrue("equals expected", o1.equals(o2));
 		assertTrue("equals expected", o2.equals(o1));
 	}
+	
+	public void testCreateOrdinalWithNegativeValue() {
+		try {
+			new Ordinal(-1, new CodePhrase("local", "at0001"));
+		} catch(Exception e) {
+			fail("failed to create ordinal with negative value");
+		}
+	}
 }
