@@ -1,3 +1,6 @@
+2007/03/13
+.allow ordinal with negative value
+
 2007/02/08
 .fixed a bug in the constructor of CDvQuantity
 
